--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,11 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   --background-color: #f3d7ca;
 }
-
+body {
+  padding-top: 100px;
+  margin-top: 100px;
+  margin: 0;
+}
 h1 {
   color: var(--heading-color);
   font-family: "Dancing Script", cursive;
