--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,21 @@
 :root {
   --heading-color: #5f5dbd;
   --second-color: #57385c;
-  --font-family: "Roboto Mono", monospace;
+  --main-font-family: "Roboto Mono", monospace;
   --accent-color: #a75265;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  --background-color: #f3d7ca;
+  --background-color: #fcf4d9;
+  --heading-font-family: "Dancing Script", cursive;
 }
 body {
-  padding-top: 100px;
+  padding-top: 75px;
   margin-top: 100px;
   margin: 0;
+  background: var(--second-color);
 }
 h1 {
   color: var(--heading-color);
-  font-family: "Dancing Script", cursive;
+  font-family: var(--second-font-family);
   text-align: center;
 }
 h3 {
@@ -23,7 +25,7 @@ h3 {
   font-size: 50px;
 }
 .container {
-  font-family: var(--font-family);
+  font-family: var(--main-font-family);
   text-align: center;
 }
 .skills {
@@ -77,4 +79,9 @@ p {
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+}
+.hero {
+  background: var(--background-color);
+  border-radius: 10px;
+  padding: 160px;
 }
