--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@ body {
 }
 h1 {
   color: var(--heading-color);
-  font-family: var(--second-font-family);
+  font-family: var(--heading-font-family);
   text-align: center;
 }
 h3 {
