--- a/src/styles.css
+++ b/src/styles.css
@@ -179,3 +179,6 @@ footer .social-links-contact a:hover {
   color: var(--second-color);
   background: var(--heading-color);
 }
+.work-footer {
+  color: var(--second-color);
+}
